--- a/lapzone/templates/socialaccount/snippets/provider_list.html
+++ b/lapzone/templates/socialaccount/snippets/provider_list.html
@@ -1,32 +1,35 @@
-{% load socialaccount %}
+{% load socialaccount %} 
 
 {% get_providers as socialaccount_providers %}
 
 <style>
-    .btn.google, .btn.github { 
-        opacity: 0.9;
-        color: white; 
-        transition: opacity 0.3s; 
-    }
-    .btn.google, .btn.google:hover { background-color: #EA4335!important; }
-    .btn.github, .btn.github:hover { background-color: var(--bs-dark)!important; }
+	.btn.google,
+	.btn.github {
+		opacity: 0.9;
+		color: white;
+		transition: opacity 0.3s;
+	}
+	.btn.google,
+	.btn.google:hover { background-color: #ea4335 !important; }
 
-    .btn.google:hover, .btn.github:hover { opacity: 1; }
+	.btn.github,
+	.btn.github:hover { background-color: var(--bs-dark) !important; }
+
+	.btn.google:hover,
+	.btn.github:hover { opacity: 1; }
 </style>
 
 <ul class="list-unstyled">
-    {% for provider in socialaccount_providers %}
-    <li class="mb-3">
-        <a
-            title="{{provider.name}}"
-            class="btn btn-dark w-50 d-flex align-items-center {{provider.name|lower}}"
-            href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"
-        >
-            <ion-icon
-                name="logo-{{provider.name|lower}}"
-            ></ion-icon>
-            <span class="me-auto ms-auto">{{provider.name}}</span>
-        </a>
-    </li>
-    {% endfor %}
+	{% for provider in socialaccount_providers %}
+	<li class="mb-3">
+		<a
+			title="{{ provider.name }}"
+			class="btn btn-dark w-50 d-flex align-items-center {{ provider.name|lower }}"
+			href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}"
+		>
+			<ion-icon name="logo-{{ provider.name|lower }}"></ion-icon>
+			<span class="me-auto ms-auto">{{ provider.name }}</span>
+		</a>
+	</li>
+	{% endfor %}
 </ul>
