--- a/lapzone/templates/_base.html
+++ b/lapzone/templates/_base.html
@@ -7,10 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<meta name="author" content="Nikita Hubariev" />
-		<meta 
-            name="keywords" 
-            content="LapZone, Nikita Hubariev, Shop, Laptop, IT" 
-        />
+		<meta
+			name="keywords"
+			content="LapZone, Nikita Hubariev, Shop, Laptop, IT"
+		/>
 		<meta
 			name="description"
 			content="{% block page_description %}Internet shop for selling laptops and accessories for them.{% endblock %}"
@@ -20,7 +20,7 @@
 		<meta property="og:title" content="" />
 		<meta property="og:site_name" content="LapZone" />
 		<meta property="og:type" content="Internet shop" />
-        <meta property="og:url" content="{{ request.build_absolute_uri }}" />
+		<meta property="og:url" content="{{ request.build_absolute_uri }}" />
 		<meta
 			property="og:image"
 			content="{% block social_image %}{% static 'images/site_header.webp' %}{% endblock %}"
@@ -35,8 +35,12 @@
 
 		<title>{% block title %}{% endblock %} | LapZone</title>
 
-        <!-- Site icon -->
-		<link rel="icon" type="image/x-icon" href="{% static 'images/logo.ico' %}" />
+		<!-- Site icon -->
+		<link
+			rel="icon"
+			type="image/x-icon"
+			href="{% static 'images/logo.ico' %}"
+		/>
 
 		<!-- Bootstrap5 CSS -->
 		<link
@@ -46,10 +50,13 @@
 			integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
 		/>
 
-        <!-- Google font "Inter" -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@200;600&display=swap">
+		<!-- Google font "Inter" -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@200;600&display=swap"
+		/>
 
 		<!-- General CSS file -->
 		<link
@@ -59,9 +66,9 @@
 		/>
 
 		{# My styles and CSS files #} 
-        {% block styles %}{% endblock %}
-
-        {% recaptcha_init %}
+        {% block styles %}{% endblock %} 
+        
+        {% recaptcha_init %} 
         {% recaptcha_ready action_name='homepage' %}
 	</head>
 	<body>
@@ -102,22 +109,22 @@
 
 				<nav class="navbar navbar-expand-md panel-bg-color">
 					<div class="container-fluid">
-						<a 
-                            class="navbar-brand text-color" 
-                            href="{% url 'shop:product_list' %}"
-                        >
+						<a
+							class="navbar-brand text-color"
+							href="{% url 'shop:product_list' %}"
+						>
 							<h4>LapZone</h4>
 						</a>
 
 						<!-- Burger button -->
 						<button
-							class="navbar-toggler"
 							type="button"
-							data-bs-toggle="collapse"
-							data-bs-target="#navbarSupportedContent"
-							aria-controls="navbarSupportedContent"
 							aria-expanded="false"
+							class="navbar-toggler"
+							data-bs-toggle="collapse"
 							aria-label="Toggle navigation"
+							aria-controls="navbarSupportedContent"
+							data-bs-target="#navbarSupportedContent"
 						>
 							<span class="navbar-toggler-icon"></span>
 						</button>
@@ -131,32 +138,37 @@
 								class="navbar-nav list-group-horizontal-md me-md-auto justify-content-center"
 							>
 								<li class="nav-item me-lg-2 me-sm-4">
-									<div class="search_form d-flex justify-content-center">
-                                        <form 
-                                            role="search" 
-                                            action="{% url 'shop:product_list' %}"
-                                            class="search d-flex align-items-center"
-                                        >
-                                            <input
-                                                name="q"
-                                                type="search"
-                                                aria-label="Title..."
-                                                placeholder="Title..."
-                                                class="form-control search me-2 ms-lg-3 ms-sm-0"
-                                                {% if request.GET.q %} value="{{ request.GET.q }}" {% endif %}
-                                            />
-                                            <button type="submit" class="btn btn-success mt-1">
-                                                Search
-                                            </button>
-                                        </form>
-                                    </div>
+									<div
+										class="search_form d-flex justify-content-center"
+									>
+										<form
+											role="search"
+											action="{% url 'shop:product_list' %}"
+											class="search d-flex align-items-center"
+										>
+											<input
+												name="q"
+												type="search"
+												aria-label="Title..."
+												placeholder="Title..."
+												class="form-control search me-2 ms-lg-3 ms-sm-0"
+												{% if request.GET.q %} value="{{ request.GET.q }}" {% endif %}
+											/>
+											<button
+												type="submit"
+												class="btn btn-success mt-1"
+											>
+												Search
+											</button>
+										</form>
+									</div>
 								</li>
 							</ul>
 							<!-- Right navbar side -->
 							<ul
 								class="navbar-nav list-group-horizontal justify-content-between align-items-center"
 							>
-                                <!-- Theme toggler -->
+								<!-- Theme toggler -->
 								<li class="nav-item me-5">
 									<div id="theme_toggler">
 										<input
@@ -174,27 +186,28 @@
 										</label>
 									</div>
 								</li>
-								<li 
-                                    class="nav-item d-flex"
-                                >
-                                    <!-- Link to user's cart detail page -->
+								<li class="nav-item d-flex">
+									<!-- Link to user's cart detail page -->
 									<a
-                                        href="{% url 'cart:detail' %}"
-                                        class="d-block text-decoration-none me-3 position-relative"
-                                    >
-                                        <ion-icon name="cart" class="pt-1" ></ion-icon>
-                                        <span 
-                                            style="top: 5px;"
-                                            class="position-absolute start-100 translate-middle badge rounded-pill bg-primary"
-                                        >
-                                            {{ cart|length }}
-                                        </span>
-                                    </a>
+										href="{% url 'cart:detail' %}"
+										class="d-block text-decoration-none me-3 position-relative"
+									>
+										<ion-icon
+											name="cart"
+											class="pt-1"
+										></ion-icon>
+										<span
+											style="top: 5px"
+											class="position-absolute start-100 translate-middle badge rounded-pill bg-primary"
+										>
+											{{ cart|length }}
+										</span>
+									</a>
 
-                                    <!-- Link to customer profile page -->
+									<!-- Link to customer profile page -->
 									<a
-                                        href="{% url 'customer:detail' %}"
-                                        class="d-block text-decoration-none"
+										href="{% url 'customer:detail' %}"
+										class="d-block text-decoration-none"
 									>
 										<ion-icon
 											class="pt-1"
@@ -208,51 +221,54 @@
 				</nav>
 			</header>
 
-            <!-- Full screen loader -->
-            <div
-                id="screen-loader"
-                style="z-index: 100; top: 0; left: 0;"
-                class="d-none content-center h-100 w-100 position-fixed bg-dark bg-opacity-75"
-            >
-                <div
-                    role="status"
-                    class="spinner-border text-white"
-                    style="width: 3rem; height: 3rem"
-                ></div>
-            </div>
+			<!-- Full screen loader -->
+			<div
+				id="screen-loader"
+				style="z-index: 100; top: 0; left: 0"
+				class="d-none content-center h-100 w-100 position-fixed bg-dark bg-opacity-75"
+			>
+				<div
+					role="status"
+					class="spinner-border text-white"
+					style="width: 3rem; height: 3rem"
+				></div>
+			</div>
 
 			<main>
 				<div class="container-fluid">
 					<div class="row">
 						<div class="my-3 content-between">
-                            <h2>
-                                {% block content_title %}{% endblock %}
-                            </h2>
-                            {% block to_right_of_content_title %}{% endblock %} 
-                        </div>
-                        {# Flashed messages #} 
-                        <div>
-                        {% for message in messages %}
+							<h2>{% block content_title %}{% endblock %}</h2>
+                            
+							{% block to_right_of_content_title %}{% endblock %}
+						</div>
+
+						{# Flashed messages #}
+						<div>
+						{% for message in messages %} 
                             {% include 'utils/_alert.html' with message=message category=message.level_tag dismissible=True only %}
-                        {% endfor %}
-                        </div>
+						{% endfor %}
+						</div>
 					</div>
+
 					{% block advanced_content %}
-                    <div class="row rounded px-3 {% block content_mb_5 %}mb-5{% endblock %}">
-                        <div class="panel-bg-color col-12 rounded p-3">
-                            {% block content %}{% endblock %}
-                        </div>
-                    </div>
-                    {% endblock advanced_content %}
+					<div
+						class="row rounded px-3 {% block content_mb_5 %}mb-5{% endblock %}"
+					>
+						<div class="panel-bg-color col-12 rounded p-3">
+							{% block content %}{% endblock %}
+						</div>
+					</div>
+					{% endblock advanced_content %}
 				</div>
 			</main>
 
-            {% block go_to_top_btn %}
+			{% block go_to_top_btn %}
 			<!-- Go to top button -->
 			<button title="Go to top" id="go-to-top-btn">
 				<ion-icon name="arrow-up-outline"></ion-icon>
 			</button>
-            {% endblock go_to_top_btn %} 
+			{% endblock go_to_top_btn %}
 
 			<footer class="panel-bg-color pt-5 pb-4">
 				<div class="container">
@@ -297,24 +313,25 @@
 						</div>
 
 						<div class="col-md-5 offset-md-1 mb-3">
-                            <h5>Subscribe to our mailing</h5>
-                            <p>
-                                Monthly digest of what's new and exciting
-                                from us.
-                            </p>
-							<form action="{% url 'mailing:create' %}" method="post">
+							<h5>Subscribe to our mailing</h5>
+							<p>
+								Monthly digest of what's new and exciting from
+								us.
+							</p>
+							<form
+                                method="post"
+								action="{% url 'mailing:create' %}"
+							>
 								<div
 									class="d-flex flex-column flex-sm-row w-100 gap-2"
 								>
-                                    {% csrf_token %}
+									{% csrf_token %} {{ mailing_form.email }}
 
-                                    {{ mailing_form.email }}
-
-                                    <input 
-                                        type="submit" 
-                                        value="Subscribe" 
-                                        class="loading btn btn-primary"
-                                    >
+									<input
+										type="submit"
+										value="Subscribe"
+										class="loading btn btn-primary"
+									/>
 								</div>
 							</form>
 						</div>
@@ -370,9 +387,9 @@
 		></script>
 
 		<!-- My scripts -->
-		<script src="{% static 'js/loading_form_btn.js' %} " defer></script>
-		<script src="{% static 'js/go_to_top_btn.js' %} " defer></script>
 		<script src="{% static 'js/toggle_theme.js' %} " defer></script>
+		<script src="{% static 'js/go_to_top_btn.js' %} " defer></script>
+		<script src="{% static 'js/loading_form_btn.js' %} " defer></script>
 
 		{% block scripts %}{% endblock %}
 	</body>
