--- a/lapzone/templates/account/email_confirm.html
+++ b/lapzone/templates/account/email_confirm.html
@@ -6,32 +6,32 @@
 
 
 {% block content %}
-    {% if confirmation %}
-        {% user_display confirmation.email_address.user as user_display %}
+{% if confirmation %}
+    {% user_display confirmation.email_address.user as user_display %}
 
-        <p>
-            {% with email=confirmation.email_address.email %}
-                Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail
-                address for user {{ user_display }}.
-            {% endwith %}
-        </p>
+    <p>
+    {% with email=confirmation.email_address.email %}
+        Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> 
+        is an e-mail address for user {{ user_display }}.
+    {% endwith %}
+    </p>
 
-        <form
-                method="post"
-                action="{% url 'account_confirm_email' confirmation.key %}"
-        >
-            {% csrf_token %}
+    <form
+        method="post"
+        action="{% url 'account_confirm_email' confirmation.key %}"
+    >
+        {% csrf_token %}
 
-            <button type="submit" class="btn btn-success btn-lg my-3">
-                Confirm
-            </button>
-        </form>
-    {% else %}
-        <p>
-            This e-mail confirmation link expired or is invalid. Please
-            <a href="{% url 'account_email' %}">
-                issue a new e-mail confirmation request
-            </a>.
-        </p>
-    {% endif %}
+        <button type="submit" class="btn btn-success btn-lg my-3">
+            Confirm
+        </button>
+    </form>
+{% else %}
+    <p>
+        This e-mail confirmation link expired or is invalid. Please
+        <a href="{% url 'account_email' %}">
+            issue a new e-mail confirmation request
+        </a>.
+    </p>
+{% endif %}
 {% endblock content %}
