FIX: Fix tests with like button on the product detail page

--- a/lapzone/shop/templates/shop/product_detail.html
+++ b/lapzone/shop/templates/shop/product_detail.html
@@ -86,9 +86,7 @@
 				class="like btn btn-danger me-auto"
 				data-href="{{ product.get_absolute_url }}like/"
 			>
-				<ion-icon
-					name="heart{% if not is_liked %}-outline{% endif %}"
-				></ion-icon>
+				<ion-icon name="heart{% if not is_liked %}-outline{% endif %}"></ion-icon>
 			</button>
 		{% else %}
 			<span></span>
