--- a/templates/_base.html
+++ b/templates/_base.html
@@ -83,7 +83,7 @@
 							<a
 								target="_blank"
 								class="nav-link text-color"
-								href="https://itish.azurewebsites.net/"
+								href="https://itish.live"
 							>
 								Blog
 							</a>
@@ -288,7 +288,7 @@
 									<a
 										target="_blank"
 										class="nav-link text-color w-25 p-0"
-										href="https://itish.azurewebsites.net/"
+										href="https://itish.live"
 									>
 										Blog
 									</a>
