--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load static recaptcha3 %}
+{% load static %}
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -66,10 +66,7 @@
 		/>
 
 		{# My styles and CSS files #} 
-        {% block styles %}{% endblock %} 
-        
-        {% recaptcha_init %} 
-        {% recaptcha_ready action_name='homepage' %}
+        {% block styles %}{% endblock %}
 	</head>
 	<body>
 		<div class="wrapper d-flex flex-column min-vh-100">
