REFACTOR: Update urls for model images in templates

--- a/cart/templates/cart/utils/_product_table.html
+++ b/cart/templates/cart/utils/_product_table.html
@@ -25,8 +25,8 @@
                     <a href="{{ product_url }}" class="opacity-1">
                         <img
                             class="img-fluid w-100"
-                            src="{{ item.product.image.url }}"
                             alt="{{ item.product.name }} image"
+                            src="https://raw.githubusercontent.com/Gubchik123/LapZone/production{{ item.product.image.url }}"
                         />
                     </a>
                 </td>
