--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -2,9 +2,9 @@
 {% load static %}
 
 {# Redefining content of meta tags #}
-{% block social_image %}{{ product.image.url }}{% endblock %}
 {% block page_description %}{{ product.description |striptags|truncatewords:25 }}{% endblock %}
 {% block social_description %}{{ product.description |striptags|truncatewords:25 }}{% endblock %}
+{% block social_image %}https://raw.githubusercontent.com/Gubchik123/LapZone/production{{ product.image.url }}{% endblock %}
 
 {% block title %}{{ product.name }}{% endblock %} 
 {% block content_title %}{{ product.name }}{% endblock %}
@@ -33,8 +33,8 @@
 					<div class="carousel-item active" data-bs-interval="5000">
 						<img
 							class="d-block w-100"
-							src="{{ product.image.url }}"
 							alt="{{ product.name }} image"
+							src="https://raw.githubusercontent.com/Gubchik123/LapZone/production{{ product.image.url }}"
 						/>
 					</div>
 
@@ -43,7 +43,7 @@
 						<img
 							class="d-block w-100"
 							alt="{{ shot.name }}"
-							src="{{ shot.image.url }}"
+							src="https://raw.githubusercontent.com/Gubchik123/LapZone/production{{ shot.image.url }}"
 						/>
 					</div>
 				{% endfor %}
