FEAT: Add the link to my LinkedIn in the site footer
in the _base.html

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -340,7 +340,10 @@
 						<p>&copy; {% now 'Y' %}</p>
 						<ul class="list-unstyled d-flex">
 							<li>
-								<a href="#">
+								<a
+									target="_blank"
+									href="https://www.linkedin.com/in/nikita-hubariev/"
+								>
 									<ion-icon name="logo-linkedin"></ion-icon>
 								</a>
 							</li>
