"Update my Telegram username"

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -358,7 +358,7 @@
 							<li class="ms-3">
 								<a
 									target="_blank"
-									href="https://t.me/nikita_id791"
+									href="https://t.me/Gubchik123"
 								>
 									<ion-icon name="navigate-circle"></ion-icon>
 								</a>
