Update the link to the ITish blog site

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -80,7 +80,7 @@
 							<a
 								target="_blank"
 								class="nav-link text-color"
-								href="https://itish.live"
+								href="https://itish.site"
 							>
 								Blog
 							</a>
@@ -285,7 +285,7 @@
 									<a
 										target="_blank"
 										class="nav-link text-color w-25 p-0"
-										href="https://itish.live"
+										href="https://itish.site"
 									>
 										Blog
 									</a>
